--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+avro==1.11.3
 colorama==0.4.6
 contourpy==1.2.0
 cycler==0.12.1
@@ -17,5 +18,5 @@ pytz==2024.1
 six==1.16.0
 termcolor==2.4.0
 tqdm==4.66.2
+treelib==1.7.0
 tzdata==2024.1
-avro==1.11.13
